Fix chosen containers, file sharing forms
Add extra padding for chosen containers, file sharing forms include NFS,
Samba, SFTP, AFP

--- a/src/rockstor/storageadmin/static/storageadmin/css/style.css
+++ b/src/rockstor/storageadmin/static/storageadmin/css/style.css
@@ -1768,6 +1768,7 @@ This file is generated by `grunt build`, do not edit it by hand.
 
 /* @group Base */
 .chosen-container {
+  padding-top: 7px;
   position: relative;
   display: inline-block;
   vertical-align: middle;
